<resources>
    <string name="app_name">Calculator</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_0" translatable="false">0</string>
    <string name="point" translatable="false">.</string>
    <string name="_clean" translatable="false">AC</string>
    <string name="_delete" translatable="false">DE</string>
    <string name="_percent" translatable="false">%</string>
    <string name="_divide" translatable="false">&#247;</string>
    <string name="_multiplication" translatable="false">&#215;</string>
    <string name="_addition" translatable="false">+</string>
    <string name="_subtract" translatable="false">&#8722;</string>
    <string name="equals" translatable="false">=</string>
    <string name="style_base">Base Font</string>
    <string name="style1">Font First</string>
    <string name="style2">Font Second</string>
    <string name="settings">Settings</string>
    <string name="back">Apply</string>
    <string name="browser">Browser</string>
</resources>