<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/grey">

    <Button
        android:id="@+id/button_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_clean"
        android:textColor="@color/orange"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_delete"
        android:textColor="@color/orange"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_percent"
        android:textColor="@color/orange"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_divide"
        android:textColor="@color/orange"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_1"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_2"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_3"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_multiplication"
        android:textColor="@color/orange"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_4"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_5"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_6"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_addition"
        android:textColor="@color/orange"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_7"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_8"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_9"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_subtract"
        android:textColor="@color/orange"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/point"
        android:textColor="@color/orange"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/equals"
        android:textColor="@color/orange"
        android:textSize="@dimen/button_text" />

</GridLayout>